# nbit

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: c-cpp.yml
benchmarks/: CMakeLists.txt  benchmark_insert.cpp  benchmark_intersect.cpp  benchmark_synthetic.cpp  benchmark_union.cpp  generate_synthetic_data.hpp
doc/: Doxyfile  README.md
src/: compatibility.h  nbit.hpp  par_set.hpp  set.hpp  sparse_set.hpp
tests/: CMakeLists.txt  example.cpp  example_dynamic.cpp  run_all.sh  test.cpp  test_data.hpp  test_difference.cpp  test_insert.cpp  test_intersection.cpp  test_symmetric_difference.cpp  test_union.cpp  tests.cpp  tests_dynamic.cpp  tests_fixed.cpp  tests_main.cpp  tests_sparse.cpp
